# smart-tv2

./: .gitignore  README.md  tv_server.py
docs/: ROLLBACK_BASELINES.md
tv_player/: platformio.ini
tv_player/boards/: waveshare_esp32s3_touch_lcd_169_v2.json
tv_player/src/: tv_player.cpp
waveshare_official/: README.md
waveshare_official/examples/Arduino-v3.2.0/examples/06_LVGL_Arduino_v9/: 06_LVGL_Arduino_v9.ino
waveshare_official/examples/Arduino-v3.2.0/examples/07_LVGL_SD_Test/: 07_LVGL_SD_Test.ino
waveshare_official/examples/Arduino-v3.2.0/examples/08_ES8311/: 08_ES8311.ino
waveshare_official/examples/Arduino-v3.2.0/libraries/Mylibrary/: pin_config.h
waveshare_official/examples/ESP-IDF-v5.4.2/01_AXP2101/: sdkconfig
waveshare_official/examples/ESP-IDF-v5.4.2/02_lvgl_demo_v9/: sdkconfig
waveshare_official/examples/ESP-IDF-v5.4.2/02_lvgl_demo_v9/main/: CMakeLists.txt  idf_component.yml
waveshare_official/examples/ESP-IDF-v5.4.2/03_esp-brookesia/: sdkconfig
waveshare_official/examples/ESP-IDF-v5.4.2/03_esp-brookesia/components/brookesia_app_tv2/: CMakeLists.txt  esp_brookesia_app_tv2.cpp  esp_brookesia_app_tv2.hpp  idf_component.yml
waveshare_official/examples/ESP-IDF-v5.4.2/03_esp-brookesia/main/: idf_component.yml
waveshare_official/examples/ESP-IDF-v5.4.2/04_Immersive_block/: sdkconfig
waveshare_official/examples/ESP-IDF-v5.4.2/04_Immersive_block/main/: idf_component.yml
waveshare_official/examples/ESP-IDF-v5.4.2/05_Spec_Analyzer/: sdkconfig
waveshare_official/examples/ESP-IDF-v5.4.2/06_videoplayer/: sdkconfig
(+3 files in other folders)
